--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -1,7 +1,7 @@
-div.bar {
-	display: inline-block;
-	width: 20px;
-	height: 75px;
-	background-color: teal;
-	margin-right: 2px; 
-}	
+h1 {
+  color: blue;
+}
+#mapid { 
+		height: 800px; 
+		width: 1600px;
+}
