--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,12 +7,29 @@
 		{% else %}
 		<title>D3 Page Template</title>
 		{% endif %}
-		<script type = "text/javascript" src ="{{ url_for('static', filename = 'd3.js') }}"></script>
-		<link rel = "stylesheet" type = "text/css" href ="{{ url_for('static', filename = 'custom.css') }}">
-
+		<link rel="stylesheet" href="/static/custom.css">
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
+		<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
 	</head>
 	<body>
+		<div>
+			<a href = "{{ url_for('index') }}" >Home</a>
+			{% if current_user.is_anonymous %}
+			<a href = "{{ url_for('login') }}"> Login</a>		
+			{% else %}
+			<a href = "{{ url_for('logout') }}"> Logout</a>		
+			{% endif %}
+		</div>
 	<hr>
+	{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+		{% for message in messages %}
+			<li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
 	{% block content %}{% endblock %}
 	</body>
 </html>
