--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -1,7 +1,12 @@
 h1 {
   color: blue;
 }
-#mapid { 
-		height: 800px; 
-		width: 1600px;
+
+body {
+    padding: 0;
+    margin: 0;
+}
+html, body, #mapid {
+    height: 100%;
+    width: 100vw;
 }
