--- a/app/templates/add_cbt.html
+++ b/app/templates/add_cbt.html
@@ -1,33 +1,11 @@
 {% extends "base.html" %}
-
-{% block content %}
+{% import 'bootstrap/wtf.html' as wtf %}
+{% block app_content %}
     <h1>Add Site</h1>
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.name.label }}<br>
-            {{ form.name(size=32) }}<br>
-            {% for error in form.name.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.latitude.label }}<br>
-            {{ form.latitude(size=32) }}<br>
-            {% for error in form.latitude.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-		<p>
-            {{ form.longitude.label }}<br>
-            {{ form.longitude(size=32) }}<br>
-            {% for error in form.longitude.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-		<p>
-			{{ form.add() }}{{ form.add.label }}
-		</p>
-		<p> {{ form.submit() }} </p>
-    </form>
+	<div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
+
 {% endblock %}
