--- a/app/templates/index_old.html
+++ b/app/templates/index_old.html
@@ -1,16 +1,8 @@
-<!doctype html>
-<html>		
-<head>
-	<title>NWD Map</title>
-</head>
-<body>
-	<div id ="mapid"></div>
-
-	<link rel="stylesheet" href="/static/custom.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
-    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-	<script type="text/javascript">
+{% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
+{% block scripts %}
+	{{ super() }}
+		<script type="text/javascript">
 				var streets = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
 											maxZoom: 18,
 											id: 'mapbox.streets',
@@ -51,5 +43,8 @@
 		</script>
 
 
-</body>
-</html>
+{% endblock %}
+
+{% block app_content %}
+		<div id ="mapid"></div>
+{% endblock %}
