--- a/app/templates/add_cbt.html
+++ b/app/templates/add_cbt.html
@@ -4,8 +4,8 @@
     <h1>Add Site</h1>
 	<div class="row">
         <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
+            {{ wtf.quick_form(cbt_form) }}
+         </div> 
     </div>
 
 {% endblock %}
