--- a/app/templates/map/index.html
+++ b/app/templates/map/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
-<html>		
-<head>
-	<title>NWD Map</title>
-</head>
-<body>
+{% extends 'bootstrap/base.html' %}
+{% block title %}
+    {% if title %}{{ title }} {% else %}NWD Map{% endif %}
+{% endblock %}
+
+
+{% block content %}
 	<div id ="mapid"></div>
 
 	<link rel="stylesheet" href="/static/custom.css">
@@ -26,7 +27,7 @@
 				//add cbt markers
 				var cbts = L.layerGroup()
 				{% for cbt in cbts %}
-				var {{ cbt.cbt }} = L.marker([{{ cbt.latitude }},{{ cbt.longitude }}]).bindPopup('{{ cbt.name }}');
+				var {{ cbt.cbt }} = L.marker([{{ cbt.latitude }},{{ cbt.longitude }}], {id: '{{ cbt.cbt }}' }).on('click', markerOnClick);
 				cbts.addLayer( {{cbt.cbt }} );
 				{% endfor %}
 
@@ -47,9 +48,40 @@
 								mymap.removeLayer(cbts);
 							}
 						});	
-
+						
+						
+				function markerOnClick(e) {
+                  var id = this.options.id;
+                  $(".modal-content").html('This is marker ' + id);
+                  $('#exampleModalCenter').modal('show');
+                  map.setView(e.target.getLatLng());
+                  e.preventDefault();
+                    }
+                mymap.on('click', function(e) {
+                  $('.modal').modal('hide');
+                });
 		</script>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
 
 
-</body>
-</html>
+{% endblock %}
