--- a/app/templates/map/cbt_modal.html
+++ b/app/templates/map/cbt_modal.html
@@ -7,7 +7,27 @@
         </button>
       </div>
       <div class="modal-body">
-        {{ cbt }}
+      
+      <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Parameter</th>
+              <th scope="col">Time</th>
+              <th scope="col">Value</th>
+            </tr>
+          </thead>
+          <tbody>
+          {% for path in paths %}
+            <tr>
+              <th scope="row">{{ path.parameter }}</th>
+              <td>{{ path.date }}</td>
+              <td>{{ path.value }}</td>
+              
+            </tr>
+            {% endfor %}
+          </tbody>
+    </table>
+        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
