--- a/app/templates/map/cbt_modal.html
+++ b/app/templates/map/cbt_modal.html
@@ -1,3 +1,4 @@
+<script src="/static/d3.js"></script>
 <script type="text/javascript">
             var data = null;
             var cbt = null;
@@ -8,7 +9,7 @@
             var parsedData = [];
             var ParseTime = d3.timeParse("%Y-%m-%dT%H:%M:%S")
             
-            var url = "http://127.0.0.1:5000/cwms?paths=TDA.Flow-Out.Ave.1Hour.1Hour.CBT-REV&startdate=2016-07-12&enddate=2016-08-12"
+            var url = "http://127.0.0.1:5000/map/cwms?paths=TDA.Flow-Out.Ave.1Hour.1Hour.CBT-REV&startdate=2016-07-12&enddate=2016-08-12"
 			async function getData(){
             //Load in the data
                 const rawdata = await d3.json(url)
