--- a/app/static/elevation_plot.css
+++ b/app/static/elevation_plot.css
@@ -29,8 +29,8 @@ circle.tool-tip-visible{
     fill: orange;
 }
 
-.tooltip {
-				position: absolute;
+.plottooltip {
+				position: relative;
 				width: 150px;
 				height: 35px;
 				padding: 5px;
@@ -43,11 +43,11 @@ circle.tool-tip-visible{
 }
 
 		
-.tooltip.hidden {
+.plottooltip.hidden {
 				display: none;
 }
 			
-.tooltip p {
+.plottooltip p {
 				margin: 0;
 				font-family: sans-serif;
 				font-size: 10px;
