--- a/app/templates/map/cbt_modal.html
+++ b/app/templates/map/cbt_modal.html
@@ -122,8 +122,28 @@
                       
                 var gY = svg.insert('g',)
                         .attr("class", "y_axis")
-                        
                         .call(yAxis);
+                        
+                        
+                // text label for the x axis
+                  svg.append("text")             
+                      .attr("transform",
+                            "translate(" + (width/2) + " ," + 
+                                           (height + margin.top + 20) + ")")
+                      .style("text-anchor", "middle")
+                      .text("Date");
+                      
+                      
+                // text label for the y axis
+                  svg.append("text")
+                      .attr("transform", "rotate(-90)")
+                      .attr("y", 0 - margin.left)
+                      .attr("x",0 - (height / 2))
+                      .attr("dy", "1em")
+                      .style("text-anchor", "middle")
+                      .text("Elevation");      
+
+                
                //add line group 
                 var gLine = svg.insert('g', '.listener-rect')
                     .attr('class', 'line-group')
@@ -146,8 +166,9 @@
     					.datum(tw.values)
     					.attr("class", "line tailwater")
     					.attr("d", line);  
-    					
-    					
+
+                   				
+    				
     		//tooltip
     		var gToolTip = svg.insert('g', '.listener-rect')
                     .attr('class', 'tooltip-group');
@@ -199,8 +220,6 @@
                                 
                         //update boxes position
                             d3.select('#mytooltip') 
-                                .style('left', cx+75+'px')
-                                .style('top', margin.top+margin.bottom+'px')
                                 .select("#twvalue")
                                 .text(tw_y);
                             d3.select('#mytooltip') 
@@ -230,38 +249,6 @@
                                 .classed("hidden", true);
                         });
             
-            
-            
-            var zoom = d3.zoom()
-                    .scaleExtent([1, 1])
-                    .translateExtent([[0, -height], [width*2+margin.left+margin.right, height*2]])
-                    .on('zoom', zoomed);
-                 
-                // Listen for zoom events
-                listenerRect.call(zoom);  
-                
-            function zoomed(){
-                
-                    var transform = d3.event.transform;
-                    // create new scale ojects based on event
-                    var new_xScale = transform.rescaleX(xAxisScale)
-                    var new_yScale = transform.rescaleY(yAxisScale)
-
-                    // update axes
-                    gX.call(xAxis.scale(new_xScale));
-                    gY.call(yAxis.scale(new_yScale));
-                    
-                    //update path
-                    newLine = d3.line()
-                        .x(function(d) { return new_xScale(d.date); })
-    					.y(function(d) { return new_yScale(d.value); });
-                    
-                    fb_path.attr('d', newLine);
-                    tw_path.attr('d', newLine);
-                     
-                };		  			   
-                          
-                          
             
             } 
             
