--- a/app/static/elevation_plot.css
+++ b/app/static/elevation_plot.css
@@ -31,25 +31,53 @@ circle.tool-tip-visible{
 
 .plottooltip {
 				position: relative;
-				width: 150px;
-				height: 35px;
+				width: 250px;
+				height: 100px;
 				padding: 5px;
 				background-color: none;
-				border-radius: 10px;
-				border:1px solid teal;
 				pointer-events: none;
 				color: black;
 				
 }
 
-		
-.plottooltip.hidden {
-				display: none;
-}
 			
 .plottooltip p {
 				margin: 0;
 				font-family: sans-serif;
-				font-size: 10px;
-				line-height: 12px;
+				font-size: 15px;
+				line-height: 18px;
 }
+
+
+.legend {
+				
+				width: 10px;
+				height: 10px;
+				float: left;
+				vertical-align: bottom;
+				bottom: 0;
+				font-family: sans-serif;
+				font-size: 15px;
+				line-height: 18px;
+    				
+}
+
+#fb-legend{
+                background-color: teal;
+
+
+}
+
+
+#tw-legend{
+                background-color: #d94801;
+
+
+}
+
+
+.col1 {
+                width:15px;
+
+}             
+
