reorganized static files

--- a/app/templates/map/cbt_modal.html
+++ b/app/templates/map/cbt_modal.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/static/elevation_plot.css">
+<link rel="stylesheet" href="/static/map/elevation_plot.css">
 <script src="/static/d3.js"></script>
         <script type="text/javascript">
         
