--- a/app/templates/map/index.html
+++ b/app/templates/map/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 	<div id ="mapid"></div>
 
-	<link rel="stylesheet" href="/static/custom.css">
+	<link rel="stylesheet" href="/static/map/custom.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
